--- a/css/index.css
+++ b/css/index.css
@@ -8,13 +8,24 @@
   color: rgb(22, 22, 22);
 }
 
+body {
+  background-color: #031e4f;
+}
+
 .container {
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  background-color: #031e4f;
+
+
+  .footer {
+    padding: 2rem;
+    font-size: small;
+    color: #fff;
+  }
 }
 
 .inner-container {
@@ -23,7 +34,7 @@
   justify-content: center;
   align-items: center;
   background-color: white;
-  margin: 1rem auto 3rem;
+  margin: 2.5rem auto .5rem;
   border-radius: 7px;
   padding: 1.5rem;
   box-shadow: #333539 0px 5px 15px;
@@ -45,7 +56,7 @@
   }
 
   h4 {
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     text-align: center;
     background-color: #e7edf8;
   }
@@ -89,7 +100,7 @@
     display: none;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 1.2rem;
+    margin-top: 1rem;
     font-weight: 500;
 
     &:hover {
